2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Fix compiler warning
	* config/amanda/flags.m4: Fix egrep expresion for solaris

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c: Fix asm code on i386

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c: Use better asm code to detect sse4.2

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c (have_sse42): Do not declare static
	* common-src/amutil.h (have_sse42): Add extern declaration
	* common-src/crc32-test.c: Do not run hardware crc32 test if the cpu
	  do not have sse4.2

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (noinst_HEADERS): Add amcrc32chw.h

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcrc32chw.c: New file to compute crc32c with sse4.2
	  instruction
	* common-src/amcrc32chw.h: New prototype file
	* common-src/Makefile.am: Code to build amcrc32chw
	* common-src/amanda.h: Define GCC_VERSION
	* common-src/amutil.c: Detect if processor hace sse4.2 and use it
	* common-src/crc32-test.c: Add test for hw version
	* config/amanda/amanda_configure.m4: Call AMANDA_CHECK_SSE42
	* config/amanda/flags.m4 (AMANDA_CHECK_SSE42) New macro to detext if
	  gcc have -msse4.2
	* installcheck/chunker.pl, installcheck/taper.pl: Fix for crc32c

2015-09-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c: Chagre the crc32 POLY to 0x82F63B78

2015-09-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c (crc32_add): Use software improvement on big
	  endian machine.

2015-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c: Fix compilation

2015-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c: Fix compilation

2015-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c (crc32_add_16bytes): New faster algorith to
	  compute crc 32